--- a/pom.xml
+++ b/pom.xml
@@ -17,14 +17,14 @@
 		<jib-maven-plugin.version>1.3.0</jib-maven-plugin.version>
 
 	</properties>
-
+<!--
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.1.3.RELEASE</version>
 		<relativePath />
 	</parent>
-
+-->
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -109,6 +109,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
 				<configuration>
 					<source>${java.version}</source>
 					<target>${java.version}</target>
@@ -118,6 +119,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>${spring-boot.version}</version>
 			</plugin>
 
 			<!-- Jib -->
@@ -131,11 +133,13 @@
 							<port>8082</port>
 						</ports>
 					</container>
+					<!--
 					<from>
 						<image>openjdk:8u212-jre</image>
 					</from>
+					-->
 					<to>
-						<image>helloworld-jib:${project.version}</image>
+						<image>osanz/helloworld-jib:${project.version}</image>
 					</to>
 				</configuration>
 				<executions>
